Minor cleanup + version number

--- a/example- Randomisation test on continuously variable data.ipynb
+++ b/example- Randomisation test on continuously variable data.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DC_stats version:  0.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dcstats\n",
+    "print(\"DC_stats version: \", dcstats.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n \t\t 7      \t  7\n",
+      "n \t\t 7     \t7\n",
       "Mean \t\t 122.428571    \t  144.857143\n",
       "SD \t\t 14.010200     \t  17.808505\n",
       "SDM \t\t 5.295358     \t  6.730982\n",
@@ -85,7 +103,9 @@
       "\n",
       " Two-sample unpaired Students t-test:\n",
       " t = \t -2.618850\n",
-      " two tail P = \t 2.243E-02\n"
+      " two tail P = \t 2.243E-02\n",
+      "\n",
+      " statistical power = 0.745\n"
      ]
     }
    ],
@@ -102,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,8 +134,8 @@
       "Effect size\n",
       "  Hedges unbiased d = \t 1.310483\n",
       "  approximate 95% confidence intervals \n",
-      "  upper 95% CI =\t 2.445723\n",
-      "  lower 95% CI =\t 0.625951\n"
+      "  upper 95% CI =\t 2.394100\n",
+      "  lower 95% CI =\t 0.639740\n"
      ]
     }
    ],
@@ -139,32 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "nran = 50000\n",
     "rnt = RantestContinuous(T1, T2, are_paired)    \n",
     "rnt.run_rantest(nran)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Rantest:  50000 randomisations\n",
-      "Two-tailed P = 2.078e-02\t(greater than or equal in absolute value to observed)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rnt)"
    ]
   },
   {
@@ -176,7 +177,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Red line: mean difference\n"
+      "\n",
+      "Rantest:  50000 randomisations\n",
+      "Two-tailed P = 2.078e-02\t(greater than or equal in absolute value to observed)\n",
+      "Pequal = 2.540e-03\t(equal in absolute value to observed)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red line: observed difference\n"
      ]
     },
     {
@@ -211,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n \t\t 7      \t  7\n",
+      "n \t\t 7     \t7\n",
       "Mean \t\t 122.428571    \t  144.857143\n",
       "SD \t\t 14.010200     \t  17.808505\n",
       "SDM \t\t 5.295358     \t  6.730982\n",
@@ -250,32 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "nran = 50000\n",
     "rnt = RantestContinuous(T1, T2, True)    \n",
     "rnt.run_rantest(nran)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Rantest:  50000 randomisations\n",
-      "Two-tailed P = 1.604e-02\t(greater than or equal in absolute value to observed)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rnt)"
    ]
   },
   {
@@ -287,7 +289,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Red line: mean difference\n"
+      "\n",
+      "Rantest:  50000 randomisations\n",
+      "Two-tailed P = 1.604e-02\t(greater than or equal in absolute value to observed)\n",
+      "Pequal = 1.604e-02\t(equal in absolute value to observed)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red line: observed difference\n"
      ]
     },
     {
