New notebook: bootstrapping confidence limits

--- a/example- Fieller.ipynb
+++ b/example- Fieller.ipynb
@@ -74,11 +74,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "##### Some explorations below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following are results from GraphPad calculator:   \n",
+    "https://www.graphpad.com/quickcalcs/errorProp2/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " CI of a sum, difference, quotient or product\n",
+    "Mean of Variable A divided by Mean of Variable B = 2.00\n",
+    "\n",
+    "|         |                    |\n",
+    "|---------|--------------------|\n",
+    "| 90% CI: |   1.54 \tto \t2.64   |\n",
+    "| 95% CI: |   1.46 \tto \t2.83   |\n",
+    "| 99% CI: |\t  1.27 \tto \t3.36   |\n",
+    "\n",
+    "These results assume that both variables follow a Gaussian distribution\n",
+    "and that the measurements of Variable A are not paired or matched to\n",
+    "measurements of Variable B.\n",
+    "\n",
+    "Results computed by the method of EC Fieller, Suppl to\n",
+    "J.R.Statist.Soc, 7,1-64 summarized here .\n",
+    "\n",
+    "|     |  Variable A  |  Variable B   |\n",
+    "|-----|--------------|---------------|\n",
+    "|Mean |\t  14.00      |    7.00       |\n",
+    "|SD   |   3.00 \t     |    2.00       |\n",
+    "|SEM  |\t  1.22 \t     |    0.82       |\n",
+    "|N \t  |    6 \t     |     6         |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wikipedia:   https://en.wikipedia.org/wiki/Fieller%27s_theorem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
