Fieller CIs calculus added to ratio.py module

--- a/example- Fieller.ipynb
+++ b/example- Fieller.ipynb
@@ -78,7 +78,7 @@
       " Confidence limits: lower 0.889734, upper 5.836045\n",
       " Approximate SD of ratio = 0.714286\n",
       " Approximate CV of ratio (%) = 35.714286\n",
-      " Approximate limits: lower 0.408473, upper 0.408473\n"
+      " Approximate limits: lower 0.408473, upper 3.591527\n"
      ]
     }
    ],
@@ -358,7 +358,7 @@
       " Confidence limits: lower 0.960007, upper 4.177313\n",
       " Approximate SD of ratio = 0.556081\n",
       " Approximate CV of ratio (%) = 29.679550\n",
-      " Approximate limits: lower 0.634591, upper 0.634591\n"
+      " Approximate limits: lower 0.634591, upper 3.112642\n"
      ]
     }
    ],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -576,6 +576,100 @@
     "aclower = (ratio - d_aprx)\n",
     "acupper = (ratio + d_aprx)\n",
     "print(\"approximate CI's: CIlower= {0:.3f}; CIupper= {1:.3f}\".format(aclower, acupper))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring ratio.py module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dcstats.ratio import Ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rt = Ratio(T1, T2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ratio = 1.87 +/- 0.17 (approximate SDM)\n",
+      "\tapproximate 95% confidence limits:\n",
+      "\tlower= 1.5; upper= 2.24\n",
+      "\tFieller 95% confidence limits:\n",
+      "\tlower= 1.44; upper= 2.49\n",
+      "\n",
+      "Reciprocal = 0.534 +/- 0.089 (approximate SDM)\n",
+      "\tapproximate 95% confidence limits:\n",
+      "\tlower= 0.336; upper= 0.731\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rt.CIs_bootstrap(50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ratio = 1.87 +/- 0.17 (approximate SDM)\n",
+      "\tapproximate 95% confidence limits:\n",
+      "\tlower= 1.5; upper= 2.24\n",
+      "\tFieller 95% confidence limits:\n",
+      "\tlower= 1.44; upper= 2.49\n",
+      "\n",
+      "Reciprocal = 0.534 +/- 0.089 (approximate SDM)\n",
+      "\tapproximate 95% confidence limits:\n",
+      "\tlower= 0.336; upper= 0.731\n",
+      "\n",
+      "Bootsrapping statistics; repeats = 50000\n",
+      "Ratio= 1.87 +/- 0.21 (bootstrapped SDM); bias= -0.014\n",
+      "\t95% confidence limits (bootstrapped):\n",
+      "\tlower= 1.52; upper= 2.35\n",
+      "Reciprocal= 0.534 +/- 0.059 (bootstrapped SDM)\n",
+      "\t95% confidence limits (bootstrapped):\n",
+      "\tlower= 0.425; upper= 0.657\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rt)"
    ]
   },
   {
